# Kikan

./: .gitignore  CMakeLists.txt
docs/Kikan/: Kikan.md
docs/Kikan/.obsidian/: workspace.json
docs/Kikan/Core/: Logging.md
docs/Kikan/ECS/: ECS.md  Signatures.md
docs/Kikan/General/: Code Style.md  Todo.md
docs/Kikan/Renderer/: Renderer.md
docs/Kikan/UI/: UI.md
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/GLFW/: glfw3.h
include/Kikan/: Engine.h  Features.h  Version.h
include/Kikan/core/: Logging.h  Maths.h
include/Kikan/ecs/: ECS.h  EcsThread.h  Entity.h  Scene.h  TypeRegistry.h  Util.h
include/Kikan/ecs/components/: AASprite.h  BasicAABBCollider.h  IComponent.h  LineQuadSprite.h  Physics.h  PolygonSprite.h  QuadSprite.h  Texture2DSprite.h  Transform.h  TriangleSprite.h
include/Kikan/ecs/systems/: BasicAABBCollisionSystem.h  IRenderSystem.h  ISystem.h  PhysicsSystem.h
include/Kikan/input/: IStdInput.h  Input.h  KeyboardLayout.h
include/Kikan/input/defInput/: DefInput.h
include/Kikan/input/stdInput/: StdInput.h
include/Kikan/opengl/: Renderer.h  Shader.h
include/Kikan/opengl/batching/: Batch.h  ManuelBatch.h
include/Kikan/opengl/buffers/: VertexBuffer.h
include/Kikan/opengl/vertices/: IVertex.h  VertexRegistry.h
include/Kikan/renderer/: IStdRenderer.h  Renderer.h
include/Kikan/renderer/defRenderer/: DefRenderer.h
include/Kikan/renderer/stdRenderer/: Camera.h  DefaultFont.h  Font.h  RenderCallbacks.h  Shader.h  Shaders.h  StdRenderer.h
include/Kikan/renderer/stdRenderer/batching/: AutoBatch.h  Batch.h  ManuelBatch.h
include/Kikan/renderer/stdRenderer/buffers/: IndexBuffer.h  Texture2D.h  VertexBuffer.h  VertexBufferLayout.h
include/Kikan/renderer/stdRenderer/vertices/: DefaultVertex.h  IVertex.h  VertexRegistry.h
include/Kikan/ui/: UI.h
include/Kikan/ui/elements/: Button.h  Helper.h  IInteractable.h  IUIElement.h  Interactable.h  Label.h  Textbox.h  UIElement.h  UINode.h
include/Kikan/util/: Timer.h
scr/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
scr/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  TypeRegistry.cpp  TypeRegistry.h
scr/ecs/components/: IComponent.h  Physics.h  PolygonSprite.h  QuadSprite.h  Transform.h  TriangleSprite.h
scr/ecs/systems/: IRenderSystem.h  ISystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h
scr/opengl/: AutoBatch.cpp  AutoBatch.h  Batch.cpp  Batch.h  Camera.cpp  Camera.h  IVertex.h  ManuelBatch.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h  VertexRegistry.cpp
scr/opengl/Batching/: AutoBatch.cpp  AutoBatch.h  Batch.cpp  Batch.h
scr/opengl/Buffer/: VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
scr/opengl/Vertices/: DefaultVertex.h  IVertex.h  VertexRegistry.cpp  VertexRegistry.h
scr/opengl/batching/: AutoBatch.cpp  AutoBatch.h  Batch.cpp  Batch.h  ManuelBatch.cpp  ManuelBatch.h
scr/opengl/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
scr/opengl/vertices/: IVertex.h  VertexRegistry.cpp  VertexRegistry.h
scr/shaders/: default.frag  default.vert
scr/util/: EarClipping.h
shaders/: default.frag  default.vert
src/: CMakeLists.txt  Engine.cpp
src/core/: Logging.cpp
src/ecs/: CMakeLists.txt  ECS.cpp  EcsThread.cpp  Scene.cpp
src/ecs/systems/: BasicAABBCollisionSystem.cpp  PhysicsSystem.cpp  SpriteRenderSystem.cpp
src/input/: Input.cpp  KeyboardLayout.cpp
src/input/defInput/: CMakeLists.txt  DefInput.cpp
src/input/stdInput/: CMakeLists.txt  StdInput.cpp
src/opengl/: Renderer.cpp  Shader.cpp
src/opengl/batching/: AutoBatch.cpp  ManuelBatch.cpp
src/opengl/buffers/: Texture2D.cpp
src/renderer/: CMakeLists.txt
src/renderer/defRenderer/: CMakeLists.txt  DefRenderer.cpp
src/renderer/stdRenderer/: CMakeLists.txt  Camera.cpp  Font.cpp  RenderCallbacks.cpp  Shader.cpp  StdRenderer.cpp  VertexRegistry.cpp
src/renderer/stdRenderer/batching/: AutoBatch.cpp  Batch.cpp  ManuelBatch.cpp
src/renderer/stdRenderer/buffers/: IndexBuffer.cpp  Texture2D.cpp  VertexBuffer.cpp
src/ui/: CMakeLists.txt  UI.cpp
src/ui/elements/: Button.cpp  IUIElement.cpp  Label.cpp  Textbox.cpp
